--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,53 +1,88 @@
 
 @import './node_modules/bootstrap/scss/bootstrap-utilities.scss';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+
+body { // type variables
+  --font-base-size: 16px;
+
+  --font-1-name: "Montserrat"; 
+  --font-1-light: 300;
+  --font-1-normal: 400;
+  --font-1-regular: var(--font-1-normal);
+  --font-1-medium: var(--font-1-normal);
+  --font-1-bold: 700;
+  --font-1-size: var(--font-base-size);
+  --font-1-lh: calc(var(--font-1-size)*1.4);
+
+  --font-2-name: "Times";
+  --font-2-light: light;
+  --font-2-normal: normal;
+  --font-2-regular: var(--font-2-normal);
+  --font-2-medium: var(--font-2-normal);
+  --font-2-bold: bold;
+  --font-2-size: var(--font-base-size);
+  --font-2-lh: calc(var(--font-2-size)*1.2);
+
+  --font-1: normal normal normal var(--font-1-size)/var(--font-1-lh) var(--font-1-name), Trebuchet, Arial, sans-serif;
+  --font-2: normal normal normal var(--font-2-size)/var(--font-2-lh) var(--font-2-name), Georgia, Serif;
+  --font-1-color: #2b2b2b;
+  --font-1-color-light: #cfcfcf;
+  --font-2-color: rgb(75, 30, 4);
+  --font-2-color-light: rgb(204, 148, 116);
+}
+
+@media (min-width: 768px) {
+  body {
+  --font-base-size: 18px;
+  } 
+}
+
+@media (min-width: 1024px) {
+  body {
+ --font-base-size: 20px;
+  }
+}
 
 // sass variables form color theming
-$pageBackgroundHex : #aac8ff;
+$pageBackgroundHex : #ffdead;
 $footerBackground: darken($pageBackgroundHex, 15%);
 $formBackground: $pageBackgroundHex;
 $formInputBorder: darken($pageBackgroundHex, 65%);
 $disclaimerBackground: darken($pageBackgroundHex, 65%);
 
+body { // colors global definitions
+  --bg-gradient-color-1: #00F3B9;
+  --bg-gradient-color-2: #2187FF;
+  
+  --navbar-brackground-color: #00000000;
+  --navitem-color: #f2f2f2;
+  --navitem-color-hover: gold;
+  
+  --page-background-hex: #{$pageBackgroundHex};
+  
+
+  scroll-behavior: smooth;
+  background-color: var(--page-background-hex);
+  font: var(--font-1);
+  color: var(--font-1-color);
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+// css-spy custom attributes changes
 :root {
+  // css-spy checkpoints
   --scroll-checkpoint: 200;
   --page-scroll-y: 0;
   --css-spy-scroll-flag: 0;
 }
 
-body {
-  --font-1-name: "Roboto";
-  --font-1-light: 300;
-  --font-1-normal: 400;
-  --font-1-bold: 900;
-  --font-1-base-size: 32px;
-
-  --font-2-name: "Times";
-  --font-2-light: light;
-  --font-2-normal: normal;
-  --font-2-bold: bold;
-  --font-2-base-size: 32px;
-
-  --font-1: normal normal normal 16px/20px var(--font-1-name), Trebuchet, Arial, sans-serif;
-  --font-2: normal normal normal 16px/20px var(--font-2-name), Georgia, Serif;
-  --font-1-color: #2b2b2b;
-  --font-1-color-light: #cfcfcf;
-  --font-2-color: rebeccapurple;
-
-  --navbar-brackground-color: #00000000;
-  --page-background-hex: #{$pageBackgroundHex};
- 
-  scroll-behavior: smooth;
-  background-color:var(--page-background-hex);
-  font: var(--font-1);
-  color: var(--font-1-color);
-}
-
 .css-spy-not-scrolled {
-  --navbar-background-color:#333333cc;
+  --navbar-background-color: #333333ff;
   --navbar-logo-height: 32px;
   @include media-breakpoint-up(md) {
-    --navbar-background-color:#33333344;
+    --navbar-background-color:#333333ff;
   }
 }
 .css-spy-scrolled {
@@ -55,7 +90,10 @@ body {
   --navbar-logo-height: 24px;
 }
 
+// global components
+
 .navbar {
+
   transition: background-color 0.2s linear;
   background-color: var(--navbar-background-color);
 
@@ -65,26 +103,38 @@ body {
   }
    
   .nav-item {
+    font-size: calc(var(--font-1-size)*0.8);
     padding: 4px;
+    a,p {
+      color: var(--navitem-color) !important;
+    }
+    a:hover {
+      color: var(--navitem-color-hover) !important;
+    }
   }
 }
 
 h1 {
   font: var(--font-1);
-  font-weight: var(--font-1-bold);
-  font-size: calc(var(--font-1-base-size)*1.2);
-  line-height: 2.8rem;
+  font-weight: var(--font-1-light);
+  font-size: calc(var(--font-1-size)*3.5);
+  line-height: calc(var(--font-1-lh)*3.5);
 }
 h2 {
   font-family: var(--font-1);
   color: var(--font-1-color);
-  font-size: calc(var(--font-1-base-size)*0.8);
+  font-size: calc(var(--font-1-size)*2.5);
+  line-height: calc(var(--font-1-lh)*2.5);
 }
 h3 {
   font: var(--font-1);
-  font-size: calc(var(--font-1-base-size)*0.6);
   font-weight: var(--font-1-bold);
-  text-transform: uppercase;
+  font-size: calc(var(--font-1-size)*1.5);
+  line-height: calc(var(--font-1-lh)*1.5);
+}
+
+p {
+  font: var(--font-1);
 }
 
 .video-container {
@@ -103,8 +153,6 @@ h3 {
 }
 
 #header, #heroheader {
-    --bg-gradient-color-1: #00F3B9;
-    --bg-gradient-color-2: #2187FF;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -130,7 +178,7 @@ h3 {
 }
 
 #header {
-  height: 80vh;
+  height: 100vh;
 }
 
 #Footer {
@@ -145,13 +193,36 @@ h3 {
 }
 
 .contactform {
+
   position: relative;
-  background-color: var(--page-background-hex);
   padding: 24px;
-  border-radius: 8px; 
+  border-radius: 4px;
+  overflow: hidden;
+
+  * { z-index: 1;}
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: var(--page-background-hex);
+    opacity: 0.5;
+    z-index: 0;
+    transition: opacity 300ms ease;
+  }
+  
+  &:hover {
+    &:before {
+      opacity: 0.8;
+      transition: opacity 300ms ease;
+    }
+  }
 
   label {
-    font-size: calc(var(--font-2-base-size)*0.4);
+    font-size: calc(var(--font-1-size)*0.8);
     display: flex;
     flex-direction: column;
     margin: 0;
